--- a/css/style.css
+++ b/css/style.css
@@ -4,9 +4,9 @@
         body {
             font-family: 'Poppins', sans-serif;
         }
-        .navbar{
-            /* background: linear-gradient(0deg, #a9968ae0, #5782c1) !important; */
-        }
+        /* .navbar{
+            background: linear-gradient(0deg, #a9968ae0, #5782c1) !important;
+        } */
         nav a.nav-link {
             color: #fff !important;
             margin-right: 7px;
