--- a/css/style.css
+++ b/css/style.css
@@ -5,11 +5,25 @@ body {
     font-family: 'Poppins', sans-serif;
 }
 
+.navbar {
+    /* background: linear-gradient(0deg, #eab783, #686bcfcc); */
+    /* background: linear-gradient(0deg, #aaabad, #5d76f5) !important; */
+}
+
 nav a.nav-link {
     color: #fff !important;
     margin-right: 7px;
     font-size: 17px;
-    border-radius: 7px;
+    /* border-radius: 7px; */
+}
+
+
+#find-provider {
+    opacity: 10;
+    /* background-color: white; */
+    color: black !important;
+    /* border-radius: 7px; */
+    border-bottom: 4px solid #ffffff;
 }
 
 .profile {
@@ -21,9 +35,9 @@ nav a.nav-link {
 
 .nav-item:hover {
     opacity: 10;
-    background-color: white;
+    /* background-color: white; */
     color: black !important;
-    border-radius: 7px;
+    /* border-radius: 7px; */
 }
 
 p,
@@ -37,7 +51,7 @@ p,
 a {
     font-size: 18px;
     transition: all 0.3s ease;
-    border-radius: 7px;
+    /* border-radius: 7px; */
 }
 
 .admin-nav {
