--- a/css/style1.css
+++ b/css/style1.css
@@ -13,13 +13,6 @@ nav a.nav-link {
 }
 
 
-#find-provider {
-    opacity: 10;
-    /* background-color: white; */
-    color: rgb(255, 255, 255) !important;
-    /* border-radius: 7px; */
-    border-bottom: 4px solid #ffffff;
-}
 
 .profile {
     display: flex;
@@ -34,6 +27,9 @@ nav a.nav-link {
     /* background-color: white; */
     color: #a0e9ff !important;
     /* border-radius: 7px; */
+    /* border-bottom: 4px solid #ffffff; */
+}
+.nav-item:active{
     border-bottom: 4px solid #ffffff;
 }
 
