--- a/css/navbar-style.css
+++ b/css/navbar-style.css
@@ -13,7 +13,6 @@ nav a.nav-link {
 }
 
 
-
 .profile {
     display: flex;
     justify-content: right;
@@ -27,9 +26,10 @@ nav a.nav-link {
     /* background-color: white; */
     color: #a0e9ff !important;
     /* border-radius: 7px; */
-    /* border-bottom: 4px solid #ffffff; */
+    border-bottom: 4px solid #ffffff;
 }
-.nav-item:active{
+
+.nav-item:active {
     border-bottom: 4px solid #ffffff;
 }
 
