--- a/css/loader.css
+++ b/css/loader.css
@@ -5,7 +5,7 @@
     left: 0;
     width: 100%;
     height: 100%;
-    background: white;
+    background: #ffffff27;
     display: flex;
     justify-content: center;
     align-items: center;
