--- a/css/loader.css
+++ b/css/loader.css
@@ -1,4 +1,4 @@
-.loader{
+/* .loader{
     position:fixed;
     z-index: 1300;
     top: 0;
@@ -16,7 +16,7 @@
 }
 
 .loader.hidden {
-    animation: fadeOut 2s;
+    animation: fadeOut 5s;
     animation-fill-mode: forwards;
 }
 
@@ -25,55 +25,46 @@
         opacity: 0;
         visibility: hidden;
     }
-}
+} */
 
-
-.loader,
-.loader:after {
+*{
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+    font-family: 'Poppins', sans-serif;
+  }
+  .loader{
+    position: fixed;
+    height: 100vh;
+    width: 100%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    background: #fff;
+    transition: all 0.5s;
+  }
+  .loader .ring{
+    height: 45px;
+    width: 45px;
+    border: 5px solid #ddd;
     border-radius: 50%;
-    width: 10em;
-    height: 10em;
-}
-.loader {            
-    margin: 60px auto;
-    font-size: 10px;
     position: relative;
-    text-indent: -9999em;
-    border-top: 1.1em solid rgba(255, 255, 255, 0.2);
-    border-right: 1.1em solid rgba(255, 255, 255, 0.2);
-    border-bottom: 1.1em solid rgba(255, 255, 255, 0.2);
-    border-left: 1.1em solid #ffffff;
-    -webkit-transform: translateZ(0);
-    -ms-transform: translateZ(0);
-    transform: translateZ(0);
-    -webkit-animation: load8 1.1s infinite linear;
-    animation: load8 1.1s infinite linear;
-}
-@-webkit-keyframes load8 {
-    0% {
-        -webkit-transform: rotate(0deg);
-        transform: rotate(0deg);
+    display: flex;
+    align-items: center;
+    justify-content: center;
+  }
+  .loader .ring:after{
+    position: absolute;
+    content: "";
+    height: 100%;
+    width: 100%;
+    border-radius: 50%;
+    border: 5px solid #ff3d00;
+    border-top-color: transparent;
+    animation: rotate 1.5s linear infinite;
+  }
+  @keyframes rotate {
+    100%{
+      transform: rotate(360deg);
     }
-    100% {
-        -webkit-transform: rotate(360deg);
-        transform: rotate(360deg);
-    }
-}
-@keyframes load8 {
-    0% {
-        -webkit-transform: rotate(0deg);
-        transform: rotate(0deg);
-    }
-    100% {
-        -webkit-transform: rotate(360deg);
-        transform: rotate(360deg);
-    }
-}
-#loadingDiv {
-    position:absolute;;
-    top:0;
-    left:0;
-    width:100%;
-    height:100%;
-    background-color:#000;
-}
+  }
