--- a/css/loader.css
+++ b/css/loader.css
@@ -42,6 +42,7 @@
     justify-content: center;
     background: #fff;
     transition: all 0.5s;
+    /* z-index: 10000; */
   }
   .loader .ring{
     height: 45px;
