--- a/LOGIN/style3.css
+++ b/LOGIN/style3.css
@@ -1,6 +1,6 @@
 @import url('https://fonts.googleapis.com/css?family=Poppins:400,500,600,700&display=swap');
 html, body{
-    background: linear-gradient( rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5) ), url(../animation/login-background.jpg);
+    /* background: linear-gradient( rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5) ), url(../animation/login-background.jpg); */
     background-attachment: fixed;
     background-size: cover;
     background-position: center;
