--- a/css/loader1.css
+++ b/css/loader1.css
@@ -5,7 +5,7 @@
     left: 0;
     width: 100%;
     height: 100%;
-    background: #ffffff27;
+    background: #ffffff;
     display: flex;
     justify-content: center;
     align-items: center;
@@ -15,10 +15,10 @@
     width: 100px;
 }
 
-.loader.hidden {
+.hidden {
     /* animation: fadeOut 2s;
     animation-fill-mode: forwards; */
-    display: none;
+    display: none !important;
 }
 
 /* @keyframes fadeOut{
