--- a/LOGIN/style3.css
+++ b/LOGIN/style3.css
@@ -1,7 +1,7 @@
 @import url('https://fonts.googleapis.com/css?family=Poppins:400,500,600,700&display=swap');
 html, body{
     /* background: linear-gradient( rgba(0, 0, 0, 0.75), rgba(0, 0, 0, 0.75) ), url(../animation/login-background.jpg);   */
-    background:linear-gradient( rgba(0, 0, 0, 0.75), rgba(0, 0, 0, 0.75) ), url(../images/mesh-gradient.png);
+    background: linear-gradient( rgb(108 104 104 / 48%), rgb(108 105 105 / 63%) ), url(../images/mesh-gradient.png);
     background-attachment: fixed;
     background-size: cover;
     background-position: center;
@@ -33,6 +33,8 @@ html, body{
 .container .form{
     /* background: #fff; */
     background: linear-gradient(0deg, #a9968ae0, #5782c1);
+     /* background: linear-gradient( rgb(108 104 104 / 48%), rgb(108 105 105 / 63%) ), url(../images/mesh-gradient.png); */
+     /* background-size: cover; */
     padding: 30px 35px;
     border-radius: 5px;
     box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
